Fix scrollbar and add title

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -190,6 +190,14 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
     margin: 0 0 1rem 0;
 }
+#vocetitle {
+    font-family: "Source Sans Pro", Helvetica, sans-serif;
+    font-weight: 900;
+    line-height: 1.5;
+    letter-spacing: 0.075em;
+    text-transform: uppercase;
+    margin: 0 0 1rem 0;
+}
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     border-bottom: 0;
@@ -197,7 +205,19 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     text-decoration: none;
 }
 
+#vocetitle {
+    border-bottom: 0;
+    color: inherit;
+    text-decoration: none;
+}
+
 h1 {
+    font-size: 4rem;
+    line-height: 1.1;
+    margin: 0 0 2rem 0;
+}
+
+#vocetitle {
     font-size: 4rem;
     line-height: 1.1;
     margin: 0 0 2rem 0;
@@ -308,6 +328,10 @@ strong, b {
 }
 
 h1, h2, h3, h4, h5, h6 {
+    color: #ffffff;
+}
+
+#vocetitle {
     color: #ffffff;
 }
 
@@ -2930,6 +2954,12 @@ header > h1 + p {
     line-height: 2;
 }
 
+#vocetitle {
+    font-size: 1.1rem;
+    margin-top: -0.5rem;
+    line-height: 2;
+}
+
 header > h2 + p {
     font-size: 1rem;
     margin-top: -0.75rem;
@@ -3806,6 +3836,12 @@ body.is-preload #intro:not(.hidden) + #header + #nav {
     margin: 0 0 2rem 0;
 }
 
+#vocetitle {
+    font-size: 4rem;
+    line-height: 1.1;
+    margin: 0 0 2rem 0;
+}
+
 #main > .post.featured {
     text-align: center;
 }
@@ -3830,6 +3866,12 @@ body.is-preload #intro:not(.hidden) + #header + #nav {
     }
 
     #main > .post header.major > h1, #main > .post header.major h2 {
+        font-size: 2.5rem;
+        line-height: 1.2;
+        margin: 0 0 1.5rem 0;
+    }
+
+    #vocetitle {
         font-size: 2.5rem;
         line-height: 1.2;
         margin: 0 0 1.5rem 0;
