--- a/assets/css/zuck.css
+++ b/assets/css/zuck.css
@@ -433,9 +433,14 @@
   overflow: scroll;
   scrollbar-color: #7f7f7f #7777; /* thumb and track color */
   scrollbar-width: thin;
+  -webkit-appearance: none;
+  border-radius: 4px;
+
 }
 .scroll::-webkit-scrollbar {
-  width: 0px;
+  width: 7px;
+  -webkit-appearance: none;
+  border-radius: 4px;
 }
 
 .scroll::-webkit-scrollbar-track {
@@ -447,6 +452,7 @@
 .scroll::-webkit-scrollbar-thumb {
   border-radius: 5px;
   -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,0.5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 
 }
 .stories.carousel {
